# serializer version: 1
# name: test_expansion_lineage_load_upstream
  list([
    dict({
      'field_data_version': dict({
        'frame_embedding': '17448056',
      }),
      'field_provenance': dict({
        'frame_embedding': '17448056',
      }),
      'video_id': 'v1',
    }),
    dict({
      'field_data_version': dict({
        'frame_embedding': '88435064',
      }),
      'field_provenance': dict({
        'frame_embedding': '88435064',
      }),
      'video_id': 'v2',
    }),
  ])
# ---
# name: test_expansion_lineage_resolve_increment_no_current
  list([
    dict({
      'field_data_version': dict({
        'frame_embedding': '17448056',
      }),
      'field_provenance': dict({
        'frame_embedding': '17448056',
      }),
      'video_id': 'v1',
    }),
    dict({
      'field_data_version': dict({
        'frame_embedding': '88435064',
      }),
      'field_provenance': dict({
        'frame_embedding': '88435064',
      }),
      'video_id': 'v2',
    }),
  ])
# ---
# name: test_identity_lineage_load_upstream
  list([
    dict({
      'field_data_version': dict({
        'default': '96465930',
      }),
      'field_provenance': dict({
        'default': '96465930',
      }),
      'sample_uid': 1,
    }),
    dict({
      'field_data_version': dict({
        'default': '63098064',
      }),
      'field_provenance': dict({
        'default': '63098064',
      }),
      'sample_uid': 2,
    }),
    dict({
      'field_data_version': dict({
        'default': '72834691',
      }),
      'field_provenance': dict({
        'default': '72834691',
      }),
      'sample_uid': 3,
    }),
  ])
# ---
